# CHrocodile

./: .gitignore  CHRocodileGUI.spec  README.md  ads_troubleshoot.py  ads_troubleshoot.spec  beckhoff_ads_interface.py  build_exe.bat  build_exe.ps1  build_exe.py  chrocodile_gui.py  device_controller.py  plotter.py  requirements.txt  settings_manager.py  setup_venv.bat  setup_venv.ps1  setup_venv.sh  simulator.py
chrocodilelib/: ChangeLog.md  Software License Agreement _ Precitec Optronik GmbH.txt  Text Disclaimer CN.txt
chrocodilelib/C++Demo/: CMakeLists.txt  readme.md
chrocodilelib/C++Demo/Async/Demo1/: Async1.cpp  CMakeLists.txt
chrocodilelib/C++Demo/Async/Demo2/: Async2.cpp  CMakeLists.txt
chrocodilelib/C++Demo/Basic_Multi_Channel/DataBuffer/: CMakeLists.txt  MultiDataBuffer.cpp
chrocodilelib/C++Demo/Basic_Multi_Channel/PullSample/: CMakeLists.txt  MultiPullSample.cpp
chrocodilelib/C++Demo/Basic_Multi_Channel/SpecTable/: CMakeLists.txt  MultiSpecTable.cpp
chrocodilelib/C++Demo/Basic_Single_Channel/DataBuffer/: CMakeLists.txt  SingleDataBuffer.cpp
chrocodilelib/C++Demo/Basic_Single_Channel/PullSample/: CMakeLists.txt  SinglePullSample.cpp
chrocodilelib/C++Demo/Basic_Single_Channel/SpecTable/: CMakeLists.txt  SingleSpecTable.cpp
chrocodilelib/C++Demo/EncoderTrigger/: CMakeLists.txt  EncoderTrigger.cpp
chrocodilelib/C++Demo/Plugin/CLS2CalibPlugin/: CLS2CalibPluginDemo.cpp  CMakeLists.txt
chrocodilelib/C++Demo/Plugin/FSSSimpleDemo/: 49_points_inf.rs  CMakeLists.export  CMakeLists.txt  FlyingSpotSimpleDemo.cpp  FlyingSpotSimpleDemo.h  Readme.md  TestRecipe.rs  writeToFile.cpp
chrocodilelib/C++Demo/Plugin/FSSSimpleDemo/cxx/: chroco_micro.hxx  chroco_micro_internal.hxx
chrocodilelib/C++Demo/SharedConnection/: CMakeLists.txt  SharedConnection.cpp
chrocodilelib/CSharpDemo/: CSharpDemos.sln  readme.md
chrocodilelib/CSharpDemo/Async/AsyncProcess/Properties/: Settings.Designer.cs
chrocodilelib/CSharpDemo/Async/Console/: Program.cs
chrocodilelib/CSharpDemo/Basic/PullSample/: PullSampleDemo.Designer.cs  PullSampleDemo.cs
chrocodilelib/CSharpDemo/Basic/RecordSample/: CSharpBasicRecordSample.csproj  RecordSampleDemo.Designer.cs  RecordSampleDemo.cs  RecordSampleDemo.resx
chrocodilelib/CSharpDemo/Plugin/CLS2CalibPlugin/: CLS2CalibPluginDemo.Designer.cs  CLS2CalibPluginDemo.cs
chrocodilelib/CSharpDemo/Plugin/FlyingSpotPlugin/Common/: FlyingSpotScanner.cs
chrocodilelib/CSharpDemo/Plugin/FlyingSpotPlugin/LargeAreaScan/: MainForm.cs
chrocodilelib/CSharpDemo/TriggerScanning/AsyncScanConsole/: Program.cs
chrocodilelib/CSharpDemo/TriggerScanning/MultiChannel/: MultiChannelScanningDemo.Designer.cs  MultiChannelScanningDemo.cs
chrocodilelib/PyDemo/: LoopFigures.rs  README.md  async.py  async_auto.py  async_fss_plugin.py  async_fss_plugin_plot.py  async_plugin.py  context.py  sync.py  sync_3d.py  sync_auto.py  sync_auto_wait.py  sync_conf.py  sync_conn_async_shared_conn.py  sync_download_spectrum.py  sync_download_table.py  sync_profile.py  sync_raw_data.py
chrocodilelib/libcore/chrpy/: __init__.py  chr_cmd_id.py  chr_connection.py  chr_def.py  chr_def_labview.py  chr_dll.py  chr_plugins.py  chr_utils.py
chrocodilelib/libcore/cs/: CHRLibConnection.cs
chrocodilelib/libcore/include/: CHRocodileLib.h  CHRocodileLibErrorDef.h  CHRocodileLibPluginDef.h
